# recreation_accessibility

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run.py  run_scenario.py
data/: boundary.gpkg  building_Kronstadt.gpkg  building_Pargolovo.gpkg  new_build_Kron.gpkg  new_build_pargolovo.gpkg  new_recr_Kron.gpkg  new_recr_Kron2.gpkg  new_recr_pargolovo.gpkg  recreation_.gpkg  water.gpkg
src/: __init__.py  accessibility.py  classify.py  config.py  data_loader.py  export.py  network.py  quality.py  scenarios.py  stress.py  territory.py  visualization.py
tests/: test_accessibility.py  test_quality.py  test_scenarios.py  test_stress.py
